--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <!-- ABOUT -->
     <section class="about">
-        <div class="container-fluid">
+        <div class="container-fluid px-0">
             <div class="row g-0">
                 <div class="col-md-6 d-flex align-items-center">
                     <div class="about-text">
@@ -62,7 +62,7 @@
 
     <!-- UNIVERSITÀ -->
     <section class="universita" id="formazione">
-        <div class="container-fluid">
+        <div class="container-fluid px-0">
             <div class="row g-0">
                 <div class="col-md-6">
                     <div class="about-photo">
@@ -100,7 +100,7 @@
 
     <!-- GALLERIA PROGETTI -->
     <section class="galleria-progetti">
-        <div class="container-fluid px-0">
+        <div class="container">
             <div class="row g-0">
                 <!-- Progetto 1 -->
                 <div class="col-md-6 col-lg-3">
