--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                     </div>
                     <div class="progetto-info">
                         <h3>Sedicesimo-Corso di Storia del Design</h3>
-                        <p>Sedicesimo approfondimento dedicato all’azienda Teenage Engineering, analizzandone filosofia, 
-                            approccio al design e alcuni dei suoi prodotti più emblematici, per comprenderne l’impatto nel panorama contemporaneo</p>
+                        <p>Sedicesimo dedicato all’azienda Teenage Engineering, analizzandone filosofia, 
+                            approccio al design e alcuni dei prodotti più emblematici, per comprenderne l’impatto nel panorama contemporaneo.</p>
                     </div>
                 </div>
             </div>
