--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 e alla progettazione digitale, esplorando il rapporto tra forma, funzione e 
                 sperimentazione materica.
             </p>
-            <a href="#">> Link</a>
+            <a href="https://drive.google.com/drive/folders/18vQ0yMczHQ4VRur1n4vHArqRcwks929z?usp=share_link" target="_blank"> Link</a>
         </div>
     </section>
 
